Enhance blog.html with content and styling
Updated blog content and added styles for better presentation.

--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Blog | Project Alchemy</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 900px;
+      margin: auto;
+      padding: 40px;
+      line-height: 1.6;
+    }
+    h1 {
+      color: #1a73e8;
+    }
+    a {
+      color: #1a73e8;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
+
   <h1>Blog</h1>
-  <p>Blog posts coming soon.</p>
-  <a href="/">← Back to Home</a>
+
+  <p>
+    Welcome to the Project Alchemy blog.
+    Articles on project management, PMP certification,
+    AI in projects, and PM careers will be published here.
+  </p>
+
+  <ul>
+    <li>New Year, Same Project Problems? How AI Helps PMs</li>
+    <li>Why Project Managers Feel Burnt Out</li>
+    <li>How Project Managers Become the Face of an Organization</li>
+  </ul>
+
+  <p>
+    <a href="/">← Back to Home</a>
+  </p>
+
 </body>
 </html>
