--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <nav>
     <a href="/">Home</a>
-    <a href="/blog.html">Blog</a>
+    <a href="blog.html">Blog</a>
   </nav>
 
   <h1>Welcome to Project Alchemy</h1>
