Refactor index.html structure and content
Updated the layout and content structure of the index.html file, including the addition of a header and new sections for project management insights.

--- a/index.html
+++ b/index.html
@@ -3,52 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <title>Project Alchemy</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 900px;
-      margin: auto;
-      padding: 40px;
-      line-height: 1.6;
-    }
-    h1 {
-      color: #1a73e8;
-    }
-    nav a {
-      margin-right: 15px;
-      text-decoration: none;
-      color: #1a73e8;
-      font-weight: bold;
-    }
-    footer {
-      margin-top: 60px;
-      color: #777;
-      font-size: 14px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <nav>
-    <a href="/">Home</a>
-    <a href="blog.html">Blog</a>
-  </nav>
+<header>
+  <div class="container">
+    <div class="logo">Project Alchemy</div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="blog.html">Blog</a>
+    </nav>
+  </div>
+</header>
 
-  <h1>Welcome to Project Alchemy</h1>
-
+<div class="hero">
+  <h1>Clarity for Project Managers</h1>
   <p>
-    Project Alchemy is a space for project managers to learn, reflect,
-    and grow — covering project delivery, PMP certification, careers,
-    and real-world lessons.
+    Insights on project delivery, PMP certification,
+    AI in project management, and real-world leadership lessons.
   </p>
+</div>
 
-  <p>
-    This site is intentionally simple. Content matters more than design.
-  </p>
+<div class="container">
 
-  <footer>
-    © 2026 Project Alchemy
-  </footer>
+  <section>
+    <h2>What You’ll Find Here</h2>
+
+    <div class="card">
+      Practical project management insights without jargon.
+    </div>
+
+    <div class="card">
+      Honest conversations about PM careers, burnout, and growth.
+    </div>
+
+    <div class="card">
+      Simple guidance on PMP certification and modern PM skills.
+    </div>
+  </section>
+
+</div>
+
+<footer>
+  <div class="container">
+    © 2026 Project Alchemy • Built with clarity
+  </div>
+</footer>
 
 </body>
 </html>
