Refactor blog.html to use external stylesheet
Replaced internal styles with a link to an external stylesheet and restructured the HTML layout.

--- a/blog.html
+++ b/blog.html
@@ -3,43 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <title>Blog | Project Alchemy</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 900px;
-      margin: auto;
-      padding: 40px;
-      line-height: 1.6;
-    }
-    h1 {
-      color: #1a73e8;
-    }
-    a {
-      color: #1a73e8;
-      text-decoration: none;
-      font-weight: bold;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>Blog</h1>
+<header>
+  <div class="container">
+    <div class="logo">Project Alchemy</div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="blog.html">Blog</a>
+    </nav>
+  </div>
+</header>
 
-  <p>
-    Welcome to the Project Alchemy blog.
-    Articles on project management, PMP certification,
-    AI in projects, and PM careers will be published here.
-  </p>
+<div class="container">
 
-  <ul>
-    <li>New Year, Same Project Problems? How AI Helps PMs</li>
-    <li>Why Project Managers Feel Burnt Out</li>
-    <li>How Project Managers Become the Face of an Organization</li>
-  </ul>
+  <section>
+    <h2>Blog</h2>
 
-  <p>
-    <a href="/">← Back to Home</a>
-  </p>
+    <div class="card">
+      New Year, Same Project Problems? How AI Helps PMs
+    </div>
+
+    <div class="card">
+      Why Project Managers Feel Burnt Out
+    </div>
+
+    <div class="card">
+      How Project Managers Become the Face of an Organization
+    </div>
+
+  </section>
+
+</div>
+
+<footer>
+  <div class="container">
+    © 2026 Project Alchemy
+  </div>
+</footer>
 
 </body>
 </html>
