--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 </header>
 
 <div class="hero">
-  <h1>Clarity for Project Managers</h1>
-  <p>
-    Insights on project delivery, PMP certification,
-    AI in project management, and real-world leadership lessons.
-  </p>
+  <h1>Thoughtful insights for project managers</h1>
+<p>
+  Writing about project management, leadership,
+  PMP certification, and modern project work.
+</p>
+
 </div>
 
 <div class="container">
