Revise blog section titles and content descriptions
Updated blog section with new titles and descriptions for articles, enhancing content relevance.

--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="blog.html">Blog</a>
+      <a href="templates.html">Free Templates</a>
     </nav>
   </div>
 </header>
@@ -20,18 +21,57 @@
 <div class="container">
 
   <section>
-    <h2>Blog</h2>
+    <h2>Project Management Insights</h2>
+    <p style="color:#6b7280; max-width:700px;">
+      Practical insights on project delivery, leadership,
+      PMP certification, AI in project management, and PM careers.
+    </p>
 
+    <!-- Blog Card -->
     <div class="card">
-      New Year, Same Project Problems? How AI Helps PMs
+      <p style="font-size:14px; color:#6b7280;">
+        Leadership • Jan 2026
+      </p>
+      <h3>
+        <a href="why-project-managers-feel-burnout.html">
+          Why Project Managers Feel Burnt Out
+        </a>
+      </h3>
+      <p>
+        Project management looks structured on paper,
+        but behind the scenes many PMs struggle with
+        constant pressure, context switching, and invisible work.
+      </p>
     </div>
 
     <div class="card">
-      Why Project Managers Feel Burnt Out
+      <p style="font-size:14px; color:#6b7280;">
+        AI & Delivery • Jan 2026
+      </p>
+      <h3>
+        <a href="#">
+          New Year, Same Project Problems? How AI Helps PMs
+        </a>
+      </h3>
+      <p>
+        AI is not replacing project managers, but it is
+        changing how PMs plan, report, and make decisions.
+      </p>
     </div>
 
     <div class="card">
-      How Project Managers Become the Face of an Organization
+      <p style="font-size:14px; color:#6b7280;">
+        Career • Jan 2026
+      </p>
+      <h3>
+        <a href="#">
+          How Project Managers Become the Face of an Organization
+        </a>
+      </h3>
+      <p>
+        Clients and stakeholders often judge organizations
+        based on one person — the project manager.
+      </p>
     </div>
 
   </section>
