Update title and content for project management blog

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Project Alchemy</title>
+  <title>Project Alchemy – Project Management Blog</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,44 +11,55 @@
   <div class="container">
     <div class="logo">Project Alchemy</div>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="blog.html">Blog</a>
+      <a href="index.html">Blog</a>
+      <a href="templates.html">Free Templates</a>
     </nav>
   </div>
 </header>
 
-<div class="hero">
-  <h1>Thoughtful insights for project managers</h1>
-<p>
-  Writing about project management, leadership,
-  PMP certification, and modern project work.
-</p>
-
-</div>
-
 <div class="container">
 
   <section>
-    <h2>What You’ll Find Here</h2>
+    <h2>Project Management Insights</h2>
+    <p style="color:#6b7280; max-width:720px;">
+      Writing about project management, leadership, PMP certification,
+      AI in projects, and the realities of modern PM work.
+    </p>
 
+    <!-- Blog Card -->
     <div class="card">
-      Practical project management insights without jargon.
+      <p class="meta">Reflection • Jan 2026</p>
+      <h3>
+        <a href="are-project-managers-really-needed.html">
+          Are Project Managers Really Needed — Or Only Noticed When Things Go Wrong?
+        </a>
+      </h3>
+      <p>
+        When projects succeed, the PM’s work often disappears into the background.
+        But when things go wrong, the role suddenly becomes visible.
+      </p>
     </div>
 
     <div class="card">
-      Honest conversations about PM careers, burnout, and growth.
+      <p class="meta">Leadership</p>
+      <h3>
+        <a href="why-project-managers-feel-burnout.html">
+          Why Project Managers Feel Burnt Out
+        </a>
+      </h3>
+      <p>
+        Project managers are busy all the time — yet many still feel behind.
+        This article explores why.
+      </p>
     </div>
 
-    <div class="card">
-      Simple guidance on PMP certification and modern PM skills.
-    </div>
   </section>
 
 </div>
 
 <footer>
   <div class="container">
-    © 2026 Project Alchemy • Built with clarity
+    © 2026 Project Alchemy
   </div>
 </footer>
 
