Revise header and blog section structure

--- a/index.html
+++ b/index.html
@@ -8,57 +8,62 @@
 <body>
 
 <header>
-  <div class="container">
+  <div class="container header">
     <div class="logo">Project Alchemy</div>
     <nav>
       <a href="index.html">Blog</a>
-      <a href="templates.html">Free Templates</a>
     </nav>
   </div>
 </header>
 
 <div class="container">
 
-  <section>
-    <h2>Project Management Insights</h2>
-    <p style="color:#6b7280; max-width:720px;">
-      Writing about project management, leadership, PMP certification,
-      AI in projects, and the realities of modern PM work.
+  <!-- Intro -->
+  <section class="intro">
+    <h1>Project management, without the noise</h1>
+    <p>
+      Writing about the realities of project work — delivery pressure,
+      leadership, burnout, and why PM work is often invisible.
     </p>
+  </section>
 
-    <!-- Blog Card -->
-    <div class="card">
-      <p class="meta">Reflection • Jan 2026</p>
-      <h3>
+  <!-- Blog Grid -->
+  <section class="blog-grid">
+
+    <article class="blog-card">
+      <span class="tag">Reflection</span>
+      <h2>
         <a href="are-project-managers-really-needed.html">
           Are Project Managers Really Needed — Or Only Noticed When Things Go Wrong?
         </a>
-      </h3>
+      </h2>
       <p>
-        When projects succeed, the PM’s work often disappears into the background.
+        When projects succeed, the PM’s work disappears into the background.
         But when things go wrong, the role suddenly becomes visible.
       </p>
-    </div>
+    </article>
 
-    <div class="card">
-      <p class="meta">Leadership</p>
-      <h3>
+    <article class="blog-card">
+      <span class="tag">Leadership</span>
+      <h2>
         <a href="why-project-managers-feel-burnout.html">
           Why Project Managers Feel Burnt Out
         </a>
-      </h3>
+      </h2>
       <p>
         Project managers are busy all the time — yet many still feel behind.
-        This article explores why.
+        This article explores why burnout has become so common.
       </p>
-    </div>
+    </article>
+
+    <!-- Add future blog cards here -->
 
   </section>
 
 </div>
 
 <footer>
-  <div class="container">
+  <div class="container footer">
     © 2026 Project Alchemy
   </div>
 </footer>
