Revise intro section for improved messaging
Updated the introduction heading and paragraph for clarity.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
   <!-- Intro -->
   <section class="intro">
-    <h1>Project management, without the noise</h1>
+    <h1>Practical insights for project managers and delivery leaders</h1>
     <p>
-      Writing about the realities of project work — delivery pressure,
-      leadership, burnout, and why PM work is often invisible.
+      Clear writing on project delivery, leadership challenges, workload clarity,
+    and why modern projects succeed or fail — beyond frameworks and buzzwords.
     </p>
   </section>
 
