--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
       </p>
     </article>
 
+    <article class="blog-card">
+  <span class="tag">Leadership</span>
+  <h2>
+    <a href="how-project-managers-become-the-face-of-an-organization.html">
+      How Project Managers Become the Face of an Organization
+    </a>
+  </h2>
+  <p>
+    Why clients and stakeholders often judge an organization
+    through its project manager — and why that responsibility matters.
+  </p>
+</article>
 
     <!-- Add future blog cards here -->
 
