Add publication date to blog post metadata

--- a/how-project-managers-become-the-face-of-an-organization.html
+++ b/how-project-managers-become-the-face-of-an-organization.html
@@ -21,7 +21,7 @@
 
   <article class="blog-post">
 
-    <p class="meta">Leadership • Project Management</p>
+    <p class="meta">Leadership • Project Management • Published: 23 Jan 2026</p>
 
     <h1>How Project Managers Become the Face of an Organization</h1>
 
