Add publication date to project management article

--- a/are-project-managers-really-needed.html
+++ b/are-project-managers-really-needed.html
@@ -21,7 +21,7 @@
 
   <article class="blog-post">
 
-    <p class="meta">Reflection • Project Management</p>
+    <p class="meta">Reflection • Project Management• Published: 07 Feb 2026</p>
 
     <h1>
       Are Project Managers Really Needed — Or Only Noticed When Things Go Wrong?
