Refactor blog post sharing and structure

--- a/are-project-managers-really-needed.html
+++ b/are-project-managers-really-needed.html
@@ -16,23 +16,22 @@
     </nav>
   </div>
 </header>
+<div class="page-share">
+  <a
+    href="https://www.linkedin.com/sharing/share-offsite/?url=https://www.projectalchemy.co.in/are-project-managers-really-needed.html"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    Share on LinkedIn
+  </a>
+</div>
 
 <div class="container">
 
   <article class="blog-post">
 
     <p class="meta">Reflection • Project Management• Published: 07 Feb 2026</p>
-    <div class="share-top">
-  <a
-    href="https://www.linkedin.com/sharing/share-offsite/?url=https://www.projectalchemy.co.in/are-project-managers-really-needed.html"
-    target="_blank"
-    rel="noopener noreferrer"
-    title="Share on LinkedIn"
-  >
-    Share
-  </a>
-</div>
-
+    
     <h1>
       Are Project Managers Really Needed — Or Only Noticed When Things Go Wrong?
     </h1>
