--- a/are-project-managers-really-needed.html
+++ b/are-project-managers-really-needed.html
@@ -16,6 +16,10 @@
     </nav>
   </div>
 </header>
+  <div class="blog-home-btn">
+  <a href="index.html">← Blog Home</a>
+</div>
+
 <div class="page-share">
   <a
     href="https://www.linkedin.com/sharing/share-offsite/?url=https://www.projectalchemy.co.in/are-project-managers-really-needed.html"
