Revise navigation links in HTML header
Updated navigation links for improved clarity.

--- a/are-project-managers-really-needed.html
+++ b/are-project-managers-really-needed.html
@@ -11,15 +11,12 @@
 <header>
   <div class="container header">
     <div class="logo">Project Alchemy</div>
-    <nav>
-      <a href="index.html">Blog</a>
-    </nav>
+     <nav>
+  <a href="index.html" class="blog-home-nav">Blog Home</a>
+</nav>
+
   </div>
 </header>
-  <div class="blog-home-btn">
-  <a href="index.html">← Blog Home</a>
-</div>
-
 <div class="page-share">
   <a
     href="https://www.linkedin.com/sharing/share-offsite/?url=https://www.projectalchemy.co.in/are-project-managers-really-needed.html"
