Update project templates and file formats

--- a/free-templates.html
+++ b/free-templates.html
@@ -32,66 +32,65 @@
 
     <div class="templates-grid">
 
-      <!-- Template 1 -->
-      <div class="template-card">
-        <h2>Project Status Report</h2>
-        <p>
-          A clear, executive-friendly status report template to communicate
-          progress, risks, and next steps.
-        </p>
-        <a href="templates/project-status-report.pdf" class="download-btn">
-          Download Template
-        </a>
-      </div>
+     <!-- Template 1 -->
+<div class="template-card">
+  <h2>Project Status Report</h2>
+  <p>
+    A clear, executive-friendly status report to communicate progress,
+    key risks, decisions needed, and next steps.
+  </p>
+  <a href="templates/project-status-report.xlsx" class="download-btn">
+    Download Template
+  </a>
+</div>
 
-      <!-- Template 2 -->
-      <div class="template-card">
-        <h2>RAID Log</h2>
-        <p>
-          A simple RAID log to track risks, assumptions, issues, and dependencies
-          across the project lifecycle.
-        </p>
-        <a href="templates/raid-log.xlsx" class="download-btn">
-          Download Template
-        </a>
-      </div>
+<!-- Template 2 -->
+<div class="template-card">
+  <h2>Risk Register</h2>
+  <p>
+    A practical risk register to identify, assess, and track project risks
+    with ownership and mitigation actions.
+  </p>
+  <a href="templates/risk-register.xlsx" class="download-btn">
+    Download Template
+  </a>
+</div>
 
-      <!-- Template 3 -->
-      <div class="template-card">
-        <h2>Stakeholder Communication Plan</h2>
-        <p>
-          Plan who needs what information, how often, and in what format —
-          without over-communication.
-        </p>
-        <a href="templates/stakeholder-communication-plan.xlsx" class="download-btn">
-          Download Template
-        </a>
-      </div>
+<!-- Template 3 -->
+<div class="template-card">
+  <h2>Stakeholder Management Plan</h2>
+  <p>
+    A simple stakeholder management template to map influence, interest,
+    communication needs, and engagement strategy.
+  </p>
+  <a href="templates/stakeholder-management-plan.xlsx" class="download-btn">
+    Download Template
+  </a>
+</div>
 
-      <!-- Template 4 -->
-      <div class="template-card">
-        <h2>Project Kickoff Checklist</h2>
-        <p>
-          A practical checklist to ensure nothing critical is missed before
-          execution begins.
-        </p>
-        <a href="templates/project-kickoff-checklist.pdf" class="download-btn">
-          Download Template
-        </a>
-      </div>
+<!-- Template 4 -->
+<div class="template-card">
+  <h2>RACI Matrix</h2>
+  <p>
+    A ready-to-use RACI matrix to clearly define roles and responsibilities
+    across teams and stakeholders.
+  </p>
+  <a href="templates/raci-matrix.xlsx" class="download-btn">
+    Download Template
+  </a>
+</div>
 
-      <!-- Template 5 -->
-      <div class="template-card">
-        <h2>Lessons Learned Template</h2>
-        <p>
-          Capture what worked, what didn’t, and what to improve —
-          in a way teams actually use.
-        </p>
-        <a href="templates/lessons-learned.docx" class="download-btn">
-          Download Template
-        </a>
-      </div>
-
+<!-- Template 5 -->
+<div class="template-card">
+  <h2>Issue Tracker</h2>
+  <p>
+    An issue tracker to log, prioritize, assign, and monitor project issues
+    until closure.
+  </p>
+  <a href="templates/issue-tracker.xlsx" class="download-btn">
+    Download Template
+  </a>
+</div>
     </div>
 
   </section>
