Add link to Free Templates in navigation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="logo">Project Alchemy</div>
     <nav>
       <a href="index.html">Blog</a>
+      <a href="free-templates.html" class="blog-home-nav">Free Templates</a>
     </nav>
   </div>
 </header>
