--- a/free-templates.html
+++ b/free-templates.html
@@ -11,7 +11,7 @@
 <header>
   <div class="container header">
     <div class="logo">
-      <a href="index.html">Project Alchemy</a>
+      <div class="logo">Project Alchemy</div>
     </div>
     <nav>
       <a href="index.html" class="blog-home-nav">Blog Home</a>
