Fix navigation links in project manager article

--- a/are-project-managers-really-needed.html
+++ b/are-project-managers-really-needed.html
@@ -13,6 +13,9 @@
     <div class="logo">Project Alchemy</div>
      <nav>
   <a href="index.html" class="blog-home-nav">Blog Home</a>
+  <a href="free-templates.html" class="templates-nav">Free Templates</a>
+</nav>
+
 </nav>
 
   </div>
